external-crates/move/crates/move-compiler/tests/move_2024/parser/use_fun_ref.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
input_file: crates/move-compiler/tests/move_2024/parser/use_fun_ref.move
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/use_fun_ref.move:3:20
  │
3 │     use fun foo as &X.foo;
  │                    ^
  │                    │
  │                    Unexpected '&'
  │                    Expected a type name with no type arguments
