external-crates/move/crates/move-compiler/tests/move_2024/parser/use_fun_ref.move
module a::m {
    public struct X {}
    use fun foo as &X.foo;
    fun foo(_: &X) { abort 0 }
}
